chrome/skin/default/zotero/overlay.css
/* ... */
#zotero-annotate-tb-collapse
{
	list-style-image: url('chrome://zotero/skin/annotate-collapse.png');
}

#zotero-annotate-tb-highlight
{
	list-style-image: url('chrome://zotero/skin/annotate-highlight.png');
}

#zotero-annotate-tb-unhighlight
{
	list-style-image: url('chrome://zotero/skin/annotate-unhighlight.png');
}

#zotero-annotate-tb-add[tool-active=true]
{
	list-style-image: url('chrome://zotero/skin/annotate-add-selected.png');
}

#zotero-annotate-tb-highlight[tool-active=true]
{
	list-style-image: url('chrome://zotero/skin/annotate-highlight-selected.png');
}

#zotero-annotate-tb-unhighlight[tool-active=true]
{
	list-style-image: url('chrome://zotero/skin/annotate-unhighlight-selected.png');
}

#zotero-toolbar
{
	visibility: visible !important;
	display: inherit !important;
}


.zotero-box {
	margin-left: 5px;
}

.zotero-box-icon {
	width: 16px;
	height: 16px;
}

.zotero-box-label {
	margin-left: 3px !important;
}

/*
  Add-on bar and toolbar icon
*/
#zotero-toolbar-button {
	list-style-image: url(chrome://zotero/skin/zotero-z-24px.png);
}

#zotero-toolbar-button:active {
	list-style-image: url(chrome://zotero/skin/zotero-z-24px-active.png);
}

toolbar[iconsize="small"] #zotero-toolbar-button {
	list-style-image: url(chrome://zotero/skin/zotero-z-16px.png);
}

toolbar[iconsize="small"] #zotero-toolbar-button:active {
	list-style-image: url(chrome://zotero/skin/zotero-z-16px-active.png);
}

#zotero-save-button {
	list-style-image: url(chrome://zotero/skin/zotero-new-z-16px.png);
}

#addon-bar #zotero-toolbar-button {
	list-style-image: url(chrome://zotero/skin/zotero_status_bar.png);
	height: 18px;
}

#addon-bar #zotero-toolbar-button[compact="true"] {
	width: 20px;
	list-style-image: url(chrome://zotero/skin/zotero_status_bar_compact.png);
}

#addon-bar #zotero-toolbar-button[error="true"] {
	list-style-image: url(chrome://zotero/skin/zotero_status_bar_error.png);
}

#zotero-save-panel {
	width: 340px;
	height: 520px;
}

